[gd_scene load_steps=15 format=2]

[ext_resource path="res://Effects/Free Smoke Fx  Pixel 05 copy.png" type="Texture" id=1]
[ext_resource path="res://World/Jordan 1 Travis Scott pink bw.png" type="Texture" id=2]
[ext_resource path="res://World/Jordan 1 Travis Scott pink copy.png" type="Texture" id=3]
[ext_resource path="res://UI/AirGordonUI.gd" type="Script" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 704, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 64, 704, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 128, 704, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 192, 704, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 256, 704, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 320, 704, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 384, 704, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 448, 704, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 512, 704, 64, 64 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="AirGordonUI" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.65, 0.65 )
script = ExtResource( 4 )

[node name="EffectsAnim" type="AnimatedSprite" parent="."]
position = Vector2( 0, 8 )
scale = Vector2( 0.8, 0.6 )
frames = SubResource( 10 )

[node name="ZoomOff" type="Sprite" parent="."]
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 2 )

[node name="ZoomOn" type="Sprite" parent="."]
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 1.5

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
